# example-package-timer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push-action.yaml
tests/: test_timer.py
timer/: __init__.py
